@@ -21,17 +21,19 @@ import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.util.EnumSet;
 import java.util.List;
+import java.util.Optional;
 
 import javax.inject.Inject;
 import javax.inject.Named;
 import javax.servlet.http.HttpServletResponse;
+import javax.xml.bind.DatatypeConverter;
 
 import com.codahale.metrics.annotation.Timed;
 import com.google.common.collect.Lists;
-import org.apache.commons.codec.binary.Base64;
 import org.esupportail.publisher.domain.AbstractClassification;
 import org.esupportail.publisher.domain.AbstractItem;
 import org.esupportail.publisher.domain.ContextKey;
+import org.esupportail.publisher.domain.Redactor;
 import org.esupportail.publisher.domain.SubjectContextKey;
 import org.esupportail.publisher.domain.SubjectKeyExtended;
 import org.esupportail.publisher.domain.Subscriber;
@@ -102,7 +104,10 @@ public class SubscriberResource {
 	public ResponseEntity<Void> create(@Validated @RequestBody Subscriber subscriber) throws URISyntaxException,
 			UnsupportedEncodingException {
 		log.debug("REST request to save Subscriber : {}", subscriber);
-		if (subscriberRepository.findOne(subscriber.getId()) != null) {
+		Optional<Subscriber> optionalSubscriber =  subscriberRepository.findById(subscriber.getId());
+		Subscriber subscriberRepo = optionalSubscriber == null || !optionalSubscriber.isPresent()? null : optionalSubscriber.get();
+
+		if (subscriberRepo != null) {
 			return ResponseEntity.badRequest().header("Failure", "The subscriber should not already exist").build();
 		}
 		// TODO: check if the context can support subscribers
@@ -118,8 +123,9 @@ public class SubscriberResource {
 		case CATEGORY:
 
 		case FEED:
-			AbstractClassification classif = classificationRepository.findOne(subscriber.getSubjectCtxId().getContext()
+			Optional<AbstractClassification> optionalAbstractClassification =  classificationRepository.findById(subscriber.getSubjectCtxId().getContext()
 					.getKeyId());
+			AbstractClassification classif = optionalAbstractClassification == null || !optionalAbstractClassification.isPresent()? null : optionalAbstractClassification.get();
 			if (classif != null
 					&& !WritingMode.TARGETS_ON_ITEM.equals(classif.getPublisher().getContext().getRedactor()
 							.getWritingMode()) && classif.getPublisher().isHasSubPermsManagement()) {
@@ -127,7 +133,8 @@ public class SubscriberResource {
 			}
 			break;
 		case ITEM:
-			AbstractItem item = itemRepository.findOne(subscriber.getSubjectCtxId().getContext().getKeyId());
+			Optional<AbstractItem> optionalAbstractItem =  itemRepository.findById(subscriber.getSubjectCtxId().getContext().getKeyId());
+			AbstractItem item = optionalAbstractItem == null || !optionalAbstractItem.isPresent()? null : optionalAbstractItem.get();
 			if (item != null && WritingMode.TARGETS_ON_ITEM.equals(item.getRedactor().getWritingMode())) {
 				subscribersOnCtx = true;
 			}
@@ -141,7 +148,7 @@ public class SubscriberResource {
 			return new ResponseEntity<>(HttpStatus.FORBIDDEN);
 		}
 		subscriberRepository.save(subscriber);
-		String composedIdURL = new String(Base64.encodeBase64(subscriber.getId().getSubject().getKeyValue().getBytes(StandardCharsets.UTF_8))) + "/";
+		String composedIdURL = DatatypeConverter.printBase64Binary(subscriber.getId().getSubject().getKeyValue().getBytes(StandardCharsets.UTF_8)) + "/";
 		composedIdURL += subscriber.getId().getSubject().getKeyType().getId() + "/";
 		composedIdURL += subscriber.getId().getSubject().getKeyAttribute() + "/";
 		composedIdURL += subscriber.getId().getContext().getKeyId() + "/";
@@ -238,10 +245,11 @@ public class SubscriberResource {
 			@PathVariable("subject_type") int subjectType, @PathVariable("subject_attribute") String subjectAttr,
 			@PathVariable("ctx_id") Long ctxId, @PathVariable("ctx_type") ContextType ctxType,
 			HttpServletResponse response) {
-		final SubjectContextKey id = new SubjectContextKey(new SubjectKeyExtended(new String(Base64.decodeBase64(subjectId)), subjectAttr,
+		final SubjectContextKey id = new SubjectContextKey(new SubjectKeyExtended(new String(DatatypeConverter.parseBase64Binary(subjectId)), subjectAttr,
             SubjectType.valueOf(subjectType)), new ContextKey(ctxId, ctxType));
 		log.debug("REST request to get SubjectContextKey : {}", id);
-		Subscriber subscriber = subscriberRepository.findOne(id);
+		Optional<Subscriber> optionalSubscriber =  subscriberRepository.findById(id);
+		Subscriber subscriber = optionalSubscriber == null || !optionalSubscriber.isPresent()? null : optionalSubscriber.get();
 		if (subscriber == null) {
 			return new ResponseEntity<>(HttpStatus.NOT_FOUND);
 		}
@@ -260,10 +268,10 @@ public class SubscriberResource {
 	public void delete(@PathVariable("subject_id") String subjectId, @PathVariable("subject_type") int subjectType,
 			@PathVariable("subject_attribute") String subjectAttr, @PathVariable("ctx_id") Long ctxId,
 			@PathVariable("ctx_type") ContextType ctxType) {
-		final SubjectContextKey id = new SubjectContextKey(new SubjectKeyExtended(new String(Base64.decodeBase64(subjectId)), subjectAttr,
+		final SubjectContextKey id = new SubjectContextKey(new SubjectKeyExtended(new String(DatatypeConverter.parseBase64Binary(subjectId)), subjectAttr,
             SubjectType.valueOf(subjectType)), new ContextKey(ctxId, ctxType));
 		log.debug("REST request to delete Subscriber : {}", id);
-		subscriberRepository.delete(id);
+		subscriberRepository.deleteById(id);
 	}
 
     /**
@@ -278,6 +286,6 @@ public class SubscriberResource {
         final SubjectContextKey modelKey = new SubjectContextKey(
             subjectKeyExtendedConverter.convertToModelKey(subjectContextKey.getSubjectKey()),
             contextConverter.convertToModelKey(subjectContextKey.getContextKey()));
-        subscriberRepository.delete(modelKey);
+        subscriberRepository.deleteById(modelKey);
     }
 }
