@@ -30,10 +30,8 @@ import java.util.List;
 import javax.annotation.PostConstruct;
 import javax.inject.Inject;
 import javax.inject.Named;
+import javax.xml.bind.DatatypeConverter;
 
-import com.google.common.collect.Lists;
-import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.codec.binary.Base64;
 import org.esupportail.publisher.Application;
 import org.esupportail.publisher.domain.ContextKey;
 import org.esupportail.publisher.domain.SubjectContextKey;
@@ -57,7 +55,7 @@ import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.MockitoAnnotations;
-import org.springframework.boot.test.SpringApplicationConfiguration;
+import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 import org.springframework.test.context.web.WebAppConfiguration;
@@ -66,13 +64,17 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.google.common.collect.Lists;
+
+import lombok.extern.slf4j.Slf4j;
+
 /**
  * Test class for the SubscriberResource REST controller.
  *
  * @see SubscriberResource
  */
 @RunWith(SpringJUnit4ClassRunner.class)
-@SpringApplicationConfiguration(classes = Application.class)
+@SpringBootTest(classes = Application.class)
 @WebAppConfiguration
 @Slf4j
 public class SubscriberResourceTest {
@@ -141,8 +143,8 @@ public class SubscriberResourceTest {
                         TestUtil.convertObjectToJsonBytes(subscriber)))
                 .andExpect(status().isCreated())
                 .andExpect(redirectedUrl("/api/subscribers/" +
-                    new String(Base64.encodeBase64(
-                        subscriber.getSubjectCtxId().getSubject().getKeyValue().getBytes(StandardCharsets.UTF_8))) + "/" +
+                    DatatypeConverter.printBase64Binary(
+                        subscriber.getSubjectCtxId().getSubject().getKeyValue().getBytes(StandardCharsets.UTF_8)) + "/" +
                     subscriber.getSubjectCtxId().getSubject().getKeyType().getId() + "/" +
                     subscriber.getSubjectCtxId().getSubject().getKeyAttribute() + "/" +
                     subscriber.getSubjectCtxId().getContext().getKeyId() + "/" +
@@ -205,8 +207,8 @@ public class SubscriberResourceTest {
 		restSubscriberMockMvc
 				.perform(
                     get("/api/subscribers/{subject_id}/{subject_type}/{subject_attribute}/{ctx_id}/{ctx_type}",
-                        new String(Base64.encodeBase64(
-                            subscriber.getSubjectCtxId().getSubject().getKeyValue().getBytes(StandardCharsets.UTF_8))),
+                        DatatypeConverter.printBase64Binary(
+                            subscriber.getSubjectCtxId().getSubject().getKeyValue().getBytes(StandardCharsets.UTF_8)),
                         subscriber.getSubjectCtxId().getSubject().getKeyType().getId(),
                         subscriber.getSubjectCtxId().getSubject().getKeyAttribute(),
                         subscriber.getSubjectCtxId().getContext().getKeyId(),
@@ -243,7 +245,7 @@ public class SubscriberResourceTest {
         Subscriber s2 = ObjTest.newSubscriberPerson(DEFAULT_CTX);
         Subscriber s3 = ObjTest.newSubscriberPersonFromAttr(DEFAULT_CTX);
         List<Subscriber> subscribers = Lists.newArrayList(s1, s2, s3);
-        subscriberRepository.save(subscribers);
+        subscriberRepository.saveAll(subscribers);
         subscriberRepository.flush();
 
         final SubscriberResolvedDTO subDTO1 = subscriberResolvedDTOFactory.from(s1);
@@ -284,8 +286,8 @@ public class SubscriberResourceTest {
         restSubscriberMockMvc
             .perform(
                 get("/api/subscribers/{subject_id}/{subject_type}/{subject_attribute}/{ctx_id}/{ctx_type}",
-                    new String(Base64.encodeBase64(
-                        subscriber.getSubjectCtxId().getSubject().getKeyValue().getBytes(StandardCharsets.UTF_8))),
+                    DatatypeConverter.printBase64Binary(
+                        subscriber.getSubjectCtxId().getSubject().getKeyValue().getBytes(StandardCharsets.UTF_8)),
                     subscriber.getSubjectCtxId().getSubject().getKeyType().getId(),
                     subscriber.getSubjectCtxId().getSubject().getKeyAttribute(),
                     subscriber.getSubjectCtxId().getContext().getKeyId(),
@@ -303,8 +305,8 @@ public class SubscriberResourceTest {
         restSubscriberMockMvc
             .perform(
                 delete("/api/subscribers/{subject_id}/{subject_type}/{subject_attribute}/{ctx_id}/{ctx_type}",
-                    new String(Base64.encodeBase64(
-                        subscriber.getSubjectCtxId().getSubject().getKeyValue().getBytes(StandardCharsets.UTF_8))),
+                    DatatypeConverter.printBase64Binary(
+                        subscriber.getSubjectCtxId().getSubject().getKeyValue().getBytes(StandardCharsets.UTF_8)),
                     subscriber.getSubjectCtxId().getSubject().getKeyType().getId(),
                     subscriber.getSubjectCtxId().getSubject().getKeyAttribute(),
                     subscriber.getSubjectCtxId().getContext().getKeyId(),
